# PyVehicle

./: AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs
src/PyVehicle/: __init__.py  main.py
src/frontend/: index.html  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/components/device-config/: DeviceConfigModal.tsx
src/frontend/src/components/title-bar/: AppTitleBar.tsx  TitleButton.tsx
src/frontend/src/pages/flashing/: FlashingPage.tsx
src/frontend/src/pages/flashing/components/: LogPanel.tsx
src/frontend/src/routes/: menu.ts
src/frontend/src/styles/: index.css
src/frontend/src/types/: device.ts
