[project]
name = "pyvehicle"
version = "0.1.0"
description = "Desktop vehicle diagnostic and tool application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=5.3",
]

[project.scripts]
PyVehicle = "PyVehicle.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/PyVehicle"]
